--- a/Explorean CUZUMEL/Cube.html
+++ b/Explorean CUZUMEL/Cube.html
@@ -507,10 +507,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 50px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -596,10 +596,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 287px; height: 42px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 77px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 77px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 77px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 77px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -818,10 +818,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 40px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 75px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 75px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 75px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 75px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 78px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -1081,8 +1081,7 @@ document.getElementById('i230').addEventListener('click', function(e){
 /* Name: On Click; */
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
- 
-/*#/#*//*#i5.i58.image.js:image/base/js*/
+   
 
 /*#/#*//*#i5.i234.image.js:image/base/js*/
 
@@ -1101,6 +1100,13 @@ document.getElementById('i95').addEventListener('click', function(e){
 bmShow('i206');
 /*#/#*//*#i206.i208.actions.js:actions/base/js.1*/
 /* Name: On Click; */
+var el = document.getElementById('i206');
+
+el.addEventListener('click', function(e){
+    /*#i208.i209.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.facebook.com/sharer/sharer.php?u=http://www.explorean.com/cozumel.html'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -1216,7 +1222,7 @@ if ('click' === 'click') {
 /* Name: On Click; */
 
 /*#/#*//*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-    
+   
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
