--- a/Alula progress/fade.html
+++ b/Alula progress/fade.html
@@ -332,7 +332,7 @@
             <br/>  
             <span class="alula_text_light alula_text_small" style="color:black;">
                 <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 10px; line-height: 1.2em">
-    Lo que tu hijo <b>coma hoy impactara su salud por el resto de su vida.</b> Por ello, complementa su alimentación con <b>Alula Progress Gold</b> con proteinas de <b>alto valor, calcio, nutrientes sin azúcares libres o añadidos</b> que contribuyen a la <b>formación y crecimiento</b> adecuado de tu pequeño.
+    Lo que tu hijo <b>coma hoy impactará su salud por el resto de su vida.</b> Por ello, complementa su alimentación con <b>Alula Progress Gold</b> con proteínas de <b>alto valor, calcio, nutrientes sin azúcares libres o añadidos</b> que contribuyen a la <b>formación y crecimiento</b> adecuado de tu pequeño.
 
 
                 </p> 
