--- a/Alula progress/Cube.html
+++ b/Alula progress/Cube.html
@@ -477,10 +477,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(-50%, -50%) translate(0px, 84px) rotate(0deg);
         transform: translate(-50%, -50%) translate(0px, 84px) rotate(0deg);
 }
-/*#/#*//*#visibility.css:visibility/globalcss*/
-.visibility-hidden, .visibility-hidden * {
-    visibility: hidden !important;
-}
 /*#/#*//*#cube.css:cube/globalcss.1*/
 
 .transformation {
@@ -621,13 +617,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 17px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 286px; height: 48px;
-        -ms-transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(1px, 78px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 88px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 88px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 88px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 88px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -637,15 +633,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i4.i190.image.css:image/base/css*/
-#i190 { opacity: 1; }
-/*#/#*//*#i190.i191.positioning.css:positioning/base/css.2*/
-#i190 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 72px; height: 46px;
-        -ms-transform: translate(0, 0) translate(222px, 203px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(222px, 203px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(222px, 203px) rotate(0deg);
-        transform: translate(0, 0) translate(222px, 203px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -681,7 +668,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i5.i196.text.css:text/base/css*/
-#i196 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i196 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i2.cube.css:cube/base/css.1*/
 #i2.shape-holder {
     position: absolute;
@@ -705,15 +692,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     overflow: hidden;
 }
 
-/*#/#*//*#i5.i202.image.css:image/base/css*/
-#i202 { opacity: 1; }
-/*#/#*//*#i202.i203.positioning.css:positioning/base/css.2*/
-#i202 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 74px; height: 47px;
-        -ms-transform: translate(0, 0) translate(222px, 202px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(222px, 202px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(222px, 202px) rotate(0deg);
-        transform: translate(0, 0) translate(222px, 202px) rotate(0deg);
-}
 /*#/#*//*#i5.i216.shape.css:shape/base/css*/
 #i216 { background-color: #dedede; opacity: 0.00;
 }
@@ -738,15 +716,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
-/*#/#*//*#i6.i204.image.css:image/base/css*/
-#i204 { opacity: 1; }
-/*#/#*//*#i204.i205.positioning.css:positioning/base/css.2*/
-#i204 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 69px; height: 44px;
-        -ms-transform: translate(0, 0) translate(229px, 206px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(229px, 206px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(229px, 206px) rotate(0deg);
-        transform: translate(0, 0) translate(229px, 206px) rotate(0deg);
-}
 /*#/#*//*#i6.i210.image.css:image/base/css*/
 #i210 { opacity: 1; }
 /*#/#*//*#i210.i211.positioning.css:positioning/base/css.1*/
@@ -757,13 +726,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i6.i214.text.css:text/base/css*/
-#i214 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i214 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i214.i215.positioning.css:positioning/base/css.1*/
 #i214 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 257px; height: 52px;
-        -ms-transform: translate(-50%, -50%) translate(-5px, 78px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-5px, 78px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-5px, 78px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-5px, 78px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 83px) rotate(0deg);
 }
 /*#/#*//*#i6.i220.shape.css:shape/base/css*/
 #i220 { background-color: #dedede; opacity: 0.00;
@@ -801,9 +770,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¿Te preocupa la nutrición y desarrollo de tu pequeño?</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/5_zpszjz6fqfc.jpg"/>
-<!--#/#--><!--#i4.i190.image.html:image/html-->
-<img id="i190" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/logobanner_zpsuufrjjsg.jpg"/>
+<img id="i130" src="https://i.imgur.com/tdVkJi4.jpg"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -816,8 +783,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i192" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/4_zpsurjkktkq.jpg"/>
 <!--#/#--><!--#i5.i196.text.html:text/html-->
 <div id="i196">Te damos 5 tips para mantenerlo saludable a través de su alimentación.</div>
-<!--#/#--><!--#i5.i202.image.html:image/html-->
-<img id="i202" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/logobanner_zpsuufrjjsg.jpg"/>
 <!--#/#--><!--#i5.i216.shape.html:shape/html-->
 <div id="i216"></div>
 <!--#/#-->
@@ -826,10 +791,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i6" class="panel-content-holder">
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
-<!--#/#--><!--#i6.i204.image.html:image/html-->
-<img id="i204" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/logobanner_zpsuufrjjsg.jpg"/>
 <!--#/#--><!--#i6.i210.image.html:image/html-->
-<img id="i210" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/6_zpsvakeusbh.jpg"/>
+<img id="i210" src="https://i.imgur.com/NRRgYqV.jpg"/>
 <!--#/#--><!--#i6.i214.text.html:text/html-->
 <div id="i214">Complementa su alimentación con una fórmula rica y nutritiva a base de lactosa.</div>
 <!--#/#--><!--#i6.i220.shape.html:shape/html-->
@@ -875,10 +838,6 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 });
 /*#/#*//*#i4.i130.image.js:image/base/js*/
 
-/*#/#*//*#i4.i190.image.js:image/base/js*/
-
-/*#/#*//*#i190.i191.positioning.js:positioning/base/js.2*/
-bmShow('i190');
 /*#/#*//*#i91.i177.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
@@ -888,13 +847,13 @@ document.getElementById('i91').addEventListener('click', function(e){
 });
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i4').addEventListener('click', function(e){
+    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i5.i192.image.js:image/base/js*/
 
-/*#/#*//*#i5.i202.image.js:image/base/js*/
-
-/*#/#*//*#i202.i203.positioning.js:positioning/base/js.2*/
-bmShow('i202');
 /*#/#*//*#i216.i217.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i216').addEventListener('click', function(e){
@@ -904,11 +863,11 @@ document.getElementById('i216').addEventListener('click', function(e){
 });
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-
-/*#/#*//*#i6.i204.image.js:image/base/js*/
-
-/*#/#*//*#i204.i205.positioning.js:positioning/base/js.2*/
-bmShow('i204');
+document.getElementById('i5').addEventListener('click', function(e){
+    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i6.i210.image.js:image/base/js*/
 
 /*#/#*//*#i220.i221.actions.js:actions/base/js*/
@@ -920,17 +879,11 @@ document.getElementById('i220').addEventListener('click', function(e){
 });
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
-
-/*#/#*//*#i183.visibility.js:visibility/js*/
-function bmShow(id) {
-    var el = document.getElementById(id);
-    el.classList.remove('visibility-hidden');
-}
-
-function bmHide(id) {
-    var el = document.getElementById(id);
-    el.classList.add('visibility-hidden');
-}
+document.getElementById('i6').addEventListener('click', function(e){
+    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*/
 
   function next(){
@@ -961,11 +914,6 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i190.image.meta:image/meta*/
-name: logobanner_zpsuufrjjsg.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i190.i191.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
@@ -985,11 +933,6 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Texto; customName: 1;
 /*#/#*//*#i196.i197.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i202.image.meta:image/meta*/
-name: logobanner_zpsuufrjjsg.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i202.i203.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i216.shape.meta:shape/meta*/
 name: Link copy;
 /*#/#*//*#i216.i219.positioning.meta:positioning/meta.1*/
@@ -1000,11 +943,6 @@ data: /*!*/{}/*!*/;
 name: Background;
 /*#/#*//*#i40.i41.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i6.i204.image.meta:image/meta*/
-name: logobanner_zpsuufrjjsg.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i204.i205.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i210.image.meta:image/meta*/
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
