--- a/Acnur 2/FadeBig.html
+++ b/Acnur 2/FadeBig.html
@@ -76,12 +76,12 @@
         .tgx_cover .tgx_logo {
             position: absolute;
             bottom: -15px;
-            width: 120px;
+            width: 100px;
             line-height: 1.3em;
             z-index: 2;
             margin-left: 47%;
             left: -50px;
-            background-color: #;
+            background-color: #10b0ef;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
@@ -331,13 +331,13 @@
     <div class="tgx_wrapper carousel-wrapper size_320x350" id="cta" onclick="openUrl();">
        
         <div class="tgx_cover bg cover-1 carousel-item item-1">
-            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small"></span></div>
+            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small"> DONAR</span></div>
         </div>
         <div class="tgx_cover bg cover-2 carousel-item item-2">
-            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small"></span></div>
+            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small"> DONAR</span></div>
         </div>
         <div class="tgx_cover bg cover-3 carousel-item item-3">
-            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small"></span></div>
+            <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small"> DONAR</span></div>
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
