correccion formatos soriana

--- a/Soriana/fade.html
+++ b/Soriana/fade.html
@@ -333,7 +333,7 @@
             <span class="soriana_text_light soriana_text_small" style="color:black;">
                 <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 15px; line-height: 1.2em">
     En <b>Soriana.com</b> encontrarás lo que buscas, desde <b>enseres de cocina, productos para mascotas, electrodomésticos, belleza, tecnología y más...</b>
-Descubre la <b>cómodidad de comprar por internet</b> con productos seleccionados específicamente para darte la mejor <b>experiencia digital. </b>
+Descubre la <b>comodidad de comprar por internet</b> con productos seleccionados específicamente para darte la mejor <b>experiencia digital. </b>
 
 
 
