--- a/Soriana/Cube.html
+++ b/Soriana/Cube.html
@@ -813,7 +813,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i181.text.html:text/html-->
-<div id="i181">¡Tus marcas favoritas hasta con 30% de descuento!</div>
+<div id="i181">¡Cumplimos 50 años con descuentos increíbles!</div>
 <!--#/#--><!--#i5.i199.image.html:image/html-->
 <img id="i199" src="https://i.imgur.com/ha9K3fC.png"/>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
