--- a/Alula progress/fade.html
+++ b/Alula progress/fade.html
@@ -308,7 +308,7 @@
     </style>
     <script>
         function openUrl() {
-            window.open("http://www.progressgold.pe/");
+            window.open("http://biznagamedia.com/correctanutriciondetubebe/");
         }
     </script>
 </head>
