--- a/Alula progress/slider2.html
+++ b/Alula progress/slider2.html
@@ -100,7 +100,7 @@
 </head>
 <body class="slider" style="margin:0px;">
 	<div class="te-container">
-		<a href="http://www.progressgold.pe/" target="_blank">
+		<a href="http://biznagamedia.com/correctanutriciondetubebe/" target="_blank">
 			<div id="te-wrapper" class="te-wrapper">
 				<div class="te-images">
 					<img src="https://i.imgur.com/2XEzeca.jpg" alt="" />
