--- a/Alula progress/video3.html
+++ b/Alula progress/video3.html
@@ -266,7 +266,7 @@
     </style>
     <script>
         function openUrl() {
-            window.open("http://www.progressgold.pe/");
+            window.open("http://biznagamedia.com/correctanutriciondetubebe/");
         }
     </script>
 </head>
@@ -352,7 +352,7 @@
                 </div>
             
         </div>
-        </div>
+        
     </div>
 </body>
 
