--- a/UPC Peru/videobig.html
+++ b/UPC Peru/videobig.html
@@ -270,7 +270,7 @@
     </style>
     <script>
         function openUrl() {
-            window.open("https://trescumbres.com.mx/wp/");
+            window.open("https://viveupc.pe/internacionalidad-interna.html");
         }
     </script>
 </head>
@@ -346,13 +346,13 @@
                
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:-45px;">
                     <span>  
-                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www2.chubb.com/mx-es/empresas/"  target="block">    
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://viveupc.pe/internacionalidad-interna.html"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/FBred2_zpsbheaacst.png" title="compartir en facebook" width="22" /></a>
 
-                            <a class="shared" href="https://plus.google.com/share?url=https://www2.chubb.com/mx-es/empresas/" target="block">
+                            <a class="shared" href="https://plus.google.com/share?url=https://viveupc.pe/internacionalidad-interna.html" target="block">
                             <img alt="compartir en google+" class="googlei" height="22" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/Gred2_zpswyw2pq4s.png" title="compartir en google+" width="22" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://www2.chubb.com/mx-es/empresas/" target="block">
+                            <a class="shared" href="https://twitter.com/home?status=https://viveupc.pe/internacionalidad-interna.html" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="22" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/TWred2_zpsbeoavqul.png" title="compartir en twitter" width="22" /></a>
                     </span>
                 </div>
