--- a/Teramont/Cube.html
+++ b/Teramont/Cube.html
@@ -485,10 +485,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 #i2 .cube-Panel {
-    -webkit-backface-visibility:hidden;
-    -moz-backface-visibility:hidden;
+    -webkit-backface-visibility:visible;
+    -moz-backface-visibility:visible;
     -ms-backface-visibility: visible;
-    backface-visibility:hidden;
+    backface-visibility:visible;
     background-size: cover;
     overflow: hidden;
 }
