--- a/Alula progress/Cube.html
+++ b/Alula progress/Cube.html
@@ -471,11 +471,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#css:common/css-->
 <style>
 /*#i196.i197.positioning.css:positioning/base/css.1*/
-#i196 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 260px; height: 55px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 84px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 84px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 84px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 84px) rotate(0deg);
+#i196 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 229px; height: 55px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
 }
 /*#/#*//*#cube.css:cube/globalcss.1*/
 
@@ -768,9 +768,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">¿Te preocupa la nutrición y desarrollo de tu pequeño?</div>
+<div id="i14">¿Te preocupa el crecimiento y desarrollo de tu hijo?</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/tdVkJi4.jpg"/>
+<img id="i130" src="https://i.imgur.com/W8rTHNY.jpg"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -780,9 +780,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i192.image.html:image/html-->
-<img id="i192" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/4_zpsurjkktkq.jpg"/>
+<img id="i192" src="https://i.imgur.com/jLy2lZr.jpg"/>
 <!--#/#--><!--#i5.i196.text.html:text/html-->
-<div id="i196">Te damos 5 tips para mantenerlo saludable a través de su alimentación.</div>
+<div id="i196">Una buena fórmula de crecimiento infantil puede ser tu mejor aliado.</div>
 <!--#/#--><!--#i5.i216.shape.html:shape/html-->
 <div id="i216"></div>
 <!--#/#-->
@@ -794,7 +794,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i210.image.html:image/html-->
 <img id="i210" src="https://i.imgur.com/NRRgYqV.jpg"/>
 <!--#/#--><!--#i6.i214.text.html:text/html-->
-<div id="i214">Complementa su alimentación con una fórmula rica y nutritiva a base de lactosa.</div>
+<div id="i214">Conoce qué aspectos considerar para elegir la mejor fórmula para tu hijo.</div>
 <!--#/#--><!--#i6.i220.shape.html:shape/html-->
 <div id="i220"></div>
 <!--#/#-->
@@ -848,6 +848,8 @@ document.getElementById('i91').addEventListener('click', function(e){
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 
+/*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
+ 
 /*#/#*//*#i5.i192.image.js:image/base/js*/
 
 /*#/#*//*#i216.i217.actions.js:actions/base/js*/
@@ -860,7 +862,8 @@ document.getElementById('i216').addEventListener('click', function(e){
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
-/*#/#*//*#i6.i210.image.js:image/base/js*/
+/*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
+  age.js:image/base/js*/
 
 /*#/#*//*#i220.i221.actions.js:actions/base/js*/
 /* Name: On Click; */
@@ -871,6 +874,7 @@ document.getElementById('i220').addEventListener('click', function(e){
 });
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
+
 
 /*#/#*/
 
