--- a/Alula progress/fade.html
+++ b/Alula progress/fade.html
@@ -65,7 +65,7 @@
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/U1nzNGk.jpg");
+            background: url("https://i.imgur.com/16orGmm.jpg");
             background-size: cover;
 
             
@@ -327,7 +327,7 @@
         </div>
         <div class="alula_text"> 
             <span class="alula_text_title alula_text_bold">
-             ¿Porque elegir Alula Progress Gold para tu niño?
+             ¿Cómo cuidar la alimentación de tus hijos en sus primeros años?
             </span>
             <br/>  
             <span class="alula_text_light alula_text_small" style="color:black;">
