--- a/Alula progress/slider2.html
+++ b/Alula progress/slider2.html
@@ -46,19 +46,19 @@
 		.slider .te-cover,
 		.slider .te-transition{
 			width: 300px;
-			height: 160px;
+			height: 170px;
 		}
 		.slider .te-cover.te-hide,
 		.slider .te-transition,
 		.slider .te-images{ display: none; }
 		.slider .te-images {
 			width: 300px;
-			height: 160px;
+			height: 170px;
 		}
 		.slider .te-cover > img,
 		.slider .te-images > img {
 			width: 300px;
-			height: 160px;
+			height: 170px;
 		}
 		.slider .te-transition.te-show{ display: block; }
 		.slider .te-back,
@@ -103,21 +103,21 @@
 		<a href="http://biznagamedia.com/correctanutriciondetubebe/" target="_blank">
 			<div id="te-wrapper" class="te-wrapper">
 				<div class="te-images">
-					<img src="https://i.imgur.com/2XEzeca.jpg" alt="" />
-					<img src="https://i.imgur.com/ROTgYa0.jpg" alt="" />
+					<img src="https://i.imgur.com/0onCClA.jpg" alt="" />
+					<img src="https://i.imgur.com/WgU5Ma2.jpg" alt="" />
 					<img src="https://i.imgur.com/7KGpTDb.jpg" alt="" />
 				</div>
 				<div class="te-cover">
-					<img src="https://i.imgur.com/2XEzeca.jpg" alt="" />
+					<img src="https://i.imgur.com/0onCClA.jpg" alt="" />
 				</div>
 				<div class="te-transition">
 					<div class="te-front"></div>
 					<div class="te-back"></div>
 				</div>
-				<div style="padding-left: 5px;padding-top:6px;padding-right:5px;">
+				<div style="padding-left: 5px;padding-top:12px;padding-right:5px;">
 					<div class="bzm_text">
-						<span class="bzm_text_title  bzm_text_bold" style="color:#2d363b;line-height:1.1;">¿Porque elegir Alula Progress Gold para tu niño?</span>
-						<span class="bzm_text_title bzm_text_medium" style="display:block;color:#000;"><i style=" font-weight:500">Contiene nutrientes sin azúcares libres o añadidos que contribuyen a un mejor desarrollo.</i></span>
+						<span class="bzm_text_title  bzm_text_bold" style="color:#2d363b;line-height:1.1;">Tips para elegir la fórmula de crecimiento ideal para tus hijos.</span>
+						
 					</div>
 
 					
@@ -213,7 +213,7 @@
 		_removeChildrens(front);
 		for (var i=0;i<front.length;i++) {
 			var img = document.createElement('img');
-			img.setAttribute('style','width: 300px;height: 160px;');
+			img.setAttribute('style','width: 300px;height: 170px;');
 			img.setAttribute('src', urlLast);
 			front[i].appendChild(img);
 		}
@@ -221,7 +221,7 @@
 		_removeChildrens(back);		
 		for (var i=0;i<back.length;i++) {
 			img = document.createElement('img');
-			img.setAttribute('style','width: 300px;height: 160px;');
+			img.setAttribute('style','width: 300px;height: 170px;');
 			img.setAttribute('src', urlCurrent);
 			back[i].appendChild(img);
 		}
