--- a/Alula progress/Cube.html
+++ b/Alula progress/Cube.html
@@ -849,7 +849,7 @@ document.getElementById('i91').addEventListener('click', function(e){
 /* Name: On Click; */
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
- 
+   
 /*#/#*//*#i5.i192.image.js:image/base/js*/
 
 /*#/#*//*#i216.i217.actions.js:actions/base/js*/
@@ -863,7 +863,8 @@ document.getElementById('i216').addEventListener('click', function(e){
 /* Name: On Click; */
 
 /*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-  age.js:image/base/js*/
+    
+/*#/#*//*#i6.i210.image.js:image/base/js*/
 
 /*#/#*//*#i220.i221.actions.js:actions/base/js*/
 /* Name: On Click; */
@@ -875,7 +876,8 @@ document.getElementById('i220').addEventListener('click', function(e){
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
 
-
+/*#/#*//*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
+    
 /*#/#*/
 
   function next(){
