--- a/Pritt/FadeBig.html
+++ b/Pritt/FadeBig.html
@@ -324,7 +324,7 @@
     </style>
     <script>
         function openUrl() {
-            window.open("http://www.acnur.org/emergencia-en-siria.html");
+            window.open("http://www.prittworld.com.mx/es/discover-all-pritt-products/gluing/neon-glue-sticks.html");
         }
     </script>
 </head>
@@ -353,7 +353,7 @@
                <!-- <p style="margin-right:9px; text-align: justify; width: 95%; margin-top: 15px; line-height: 1.2em"> 
   
 
-<div id="botones-para-compartir" style="display:inline;float:left;margin-top:5px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://www.acnur.org/emergencia-en-siria.html" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="http://i1380.photobucket.com/albums/ah185/biznagamedia/fb-lightblue_zpszy62tqfs.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=http://www.acnur.org/emergencia-en-siria.html" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/g-lightblue_zpspddxx2u7.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=http://www.acnur.org/emergencia-en-siria.html" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/tw-lightblue_zpsfmxkrrx0.png" title="compartir en twitter" width="22" /></a>
+<div id="botones-para-compartir" style="display:inline;float:left;margin-top:5px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://www.prittworld.com.mx/es/discover-all-pritt-products/gluing/neon-glue-sticks.html" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="http://i1380.photobucket.com/albums/ah185/biznagamedia/fb-lightblue_zpszy62tqfs.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=http://www.prittworld.com.mx/es/discover-all-pritt-products/gluing/neon-glue-sticks.html" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/g-lightblue_zpspddxx2u7.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=http://www.prittworld.com.mx/es/discover-all-pritt-products/gluing/neon-glue-sticks.html" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/tw-lightblue_zpsfmxkrrx0.png" title="compartir en twitter" width="22" /></a>
               
                   </span>
             </div>-->     
