--- a/Alula progress/fade.html
+++ b/Alula progress/fade.html
@@ -60,7 +60,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i1380.photobucket.com/albums/ah185/biznagamedia/3_zpsjdscoice.jpg");
+            background: url("https://i.imgur.com/0egTkXY.jpg");
             background-size: cover;
         }
 
@@ -126,7 +126,7 @@
         }
 
         .alula_text_title {
-            font-size: 155%;
+            font-size: 135%;
             color: #453936;
             display: inline-block;
             width: 98%;
@@ -327,11 +327,11 @@
         </div>
         <div class="alula_text"> 
             <span class="alula_text_title alula_text_bold">
-             ¿Cómo cuidar la alimentación de tus hijos en sus primeros años?
+             4 Aspectos fundamentales a tener en cuenta para la correcta nutrición de tu bebé.
             </span>
             <br/>  
             <span class="alula_text_light alula_text_small" style="color:black;">
-                <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 10px; line-height: 1.2em">
+                <p style="margin-right:10px; text-align: justify; width: 90%; margin-top: 15px; line-height: 1.2em">
     Lo que tu hijo <b>coma hoy impactará su salud por el resto de su vida.</b> Por ello, complementa su alimentación con <b>Alula Progress Gold</b> con proteínas de <b>alto valor, calcio, nutrientes sin azúcares libres o añadidos</b> que contribuyen a la <b>formación y crecimiento</b> adecuado de tu pequeño.
 
 
