--- a/Alula progress/slider2.html
+++ b/Alula progress/slider2.html
@@ -105,7 +105,7 @@
 				<div class="te-images">
 					<img src="https://i.imgur.com/0onCClA.jpg" alt="" />
 					<img src="https://i.imgur.com/WgU5Ma2.jpg" alt="" />
-					<img src="https://i.imgur.com/7KGpTDb.jpg" alt="" />
+					<img src="https://i.imgur.com/Pw0E0Jh.jpg" alt="" />
 				</div>
 				<div class="te-cover">
 					<img src="https://i.imgur.com/0onCClA.jpg" alt="" />
