Cambio host fotos

--- a/Pritt/Cube.html
+++ b/Pritt/Cube.html
@@ -632,7 +632,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
 /*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
-#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 157px;
+#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -653,7 +653,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
-#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 41px; height: 38px;
+#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 42px; height: 39px;
         -ms-transform: translate(0, 0) translate(254px, 207px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(254px, 207px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(254px, 207px) rotate(0deg);
@@ -708,7 +708,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i184.image.css:image/base/css*/
 #i184 { opacity: 1; }
 /*#/#*//*#i184.i185.positioning.css:positioning/base/css.2*/
-#i184 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 41px; height: 38px;
+#i184 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 42px; height: 39px;
         -ms-transform: translate(0, 0) translate(254px, 207px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(254px, 207px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(254px, 207px) rotate(0deg);
@@ -759,7 +759,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i186.image.css:image/base/css*/
 #i186 { opacity: 1; }
 /*#/#*//*#i186.i187.positioning.css:positioning/base/css.2*/
-#i186 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 41px; height: 38px;
+#i186 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 42px; height: 39px;
         -ms-transform: translate(0, 0) translate(254px, 207px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(254px, 207px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(254px, 207px) rotate(0deg);
@@ -801,9 +801,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¿Sabes que existe un pegamento con el que puedes colorear y pegar a la vez?</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/Pritt001_zps8h1i6llv.png"/>
+<img id="i130" src="https://i.imgur.com/IcSP0Dr.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
-<img id="i181" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/Pritt00_zpsw4k2a9d6.png"/>
+<img id="i181" src="https://i.imgur.com/R7VQj71.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -815,9 +815,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">¡¡Haz que sus trabajos del cole tengan mas color!!</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/Pritt009_zpsxbnjir2d.png"/>
+<img id="i58" src="https://i.imgur.com/7wPygz9.png"/>
 <!--#/#--><!--#i5.i184.image.html:image/html-->
-<img id="i184" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/Pritt00_zpsw4k2a9d6.png"/>
+<img id="i184" src="https://i.imgur.com/R7VQj71.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -829,9 +829,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">¡¡Colorea, pega y diviértete, todo en uno!!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/Pritt002_zps3ijplzqn.png"/>
+<img id="i60" src="https://i.imgur.com/nmHeKYk.png"/>
 <!--#/#--><!--#i6.i186.image.html:image/html-->
-<img id="i186" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/Pritt00_zpsw4k2a9d6.png"/>
+<img id="i186" src="https://i.imgur.com/R7VQj71.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -962,7 +962,7 @@ customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i181.image.meta:image/meta*/
-name: Pritt00_zpsw4k2a9d6.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: R7VQj71.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i181.i182.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -986,7 +986,7 @@ customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i184.image.meta:image/meta*/
-name: Pritt00_zpsw4k2a9d6.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: R7VQj71.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i184.i185.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1010,7 +1010,7 @@ customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i186.image.meta:image/meta*/
-name: Pritt00_zpsw4k2a9d6.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: R7VQj71.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i186.i187.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
