--- a/Pritt/slider.html
+++ b/Pritt/slider.html
@@ -242,11 +242,11 @@
             <div id="te-wrapper" class="te-wrapper">
                <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;"></span></div>
                 <div class="te-images"> 
-                <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/Pritt010_zpskmwhgtms.png" alt="" /> 
-                <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/Pritt005_zpsxibpbfj9.png" alt="" /> 
-                <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/Pritt002_zps3ijplzqn.png" alt="" /> </div>
+                <img src="https://i.imgur.com/RrDn041.png" alt="" /> 
+                <img src="https://i.imgur.com/TcFAWNj.png" alt="" /> 
+                <img src="https://i.imgur.com/A6TxQIP.png" alt="" /> </div>
                 <div class="te-cover"> 
-                <img src="https://i1380.photobucket.com/albums/ah185/biznagamedia/Pritt002_zps3ijplzqn.png" alt="" /> </div>
+                <img src="https://i.imgur.com/A6TxQIP.png" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
@@ -254,7 +254,7 @@
                 <div style="margin-top:10px; margin-left:0px; margin-right: 10px;">
                     <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:25px; text-align:left;">¡¡Colorea, pega y diviértete todo en uno!!  </span> 
                     
-                    <img class="logo" style="margin-top: 2px;" src="https://i1380.photobucket.com/albums/ah185/biznagamedia/Pritt00_zpsw4k2a9d6.png" alt=""> </div>
+                    <img class="logo" style="margin-top: 2px;" src="https://i.imgur.com/R7VQj71.png" alt=""> </div>
                 </div>
              <!--   <div id="botones-para-compartir" style="display:inline;float:left;margin-top:21px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://www.prittworld.com.mx/es/discover-all-pritt-products/gluing/neon-glue-sticks.html" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=http://www.prittworld.com.mx/es/discover-all-pritt-products/gluing/neon-glue-sticks.html" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=http://www.prittworld.com.mx/es/discover-all-pritt-products/gluing/neon-glue-sticks.html" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="22" /></a> </span></div>-->
             </div>
